<resources>
    <string name="app_name">cz2006-mappy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registration_activity">Registration</string>
    <string name="confirm">Confirm</string>

    <!--Edit Profile Page -->
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Please enter your new Password</string>
    <string name="reenter_new_password">Please re-enter your new Password</string>
    <string name="enter_current_password">Please enter your current password</string>

    <!--Item Detail Page -->
    <string name="itemDetailId">Item Id</string>
    <string name="itemDetailName">Name of Item</string>
    <string name="itemDetailUsername">Sold By: Username</string>
    <string name="itemDetailPrice">Price : $SGD</string>
    <string name="itemDetailToken">Item Token</string>
    <string name="itemDetailDescription">Item Description</string>
    <string name="itemDetailSellerId">Sold By: Seller Id</string>

    <!--Create Item Page -->
    <string name="createItemName">Item Name:</string>
    <string name="createItemPrice">Item Price (SGD):</string>
    <string name="createItemDescription">Item Description</string>
    <string name="createItemButton">CREATE</string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_listing">Listing</string>
    <string name="title_activity_set_target">SetTargetActivity</string>
    <string name="title_activity_my_listing">MyListingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Feedback page -->
    <string name="feedback_warning">Kindly note that the feedback is limited to 1500 characters</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="feedback_placeholder"><p>Enter Feedback Here</p></string>

    <!--See More page-->
    <string name="aluminium_can"><p> Aluminium Can</p></string>
    <string name="metal_tin"><p>Metal Tin</p></string>
    <string name="box"><p> Old Corrugated Cardboard </p></string>
    <string name="paper"><p> Papers </p></string>
    <string name="price1"><p> SGD 0.50/kg</p></string>
    <string name="price2"><p> SGD 0.10/kg</p></string>

    <!--Convert to cash page -->
    <string name="see_more"><p> See More</p></string>
    <string name="cash_incentives"><p> Cash Incentives For Recyclables </p></string>
    <string name="back"><p> Back </p></string>
    <string name="title_activity_convert_to_cash_new">ConvertToCashNew</string>
    <string name="title_activity_my_purchases">MyPurchases</string>
    <string name="title_activity_insert_token">InsertToken</string>
    <string name="title_activity_contact_seller">ContactSeller</string>
    <string name="title_activity_maps">Map</string>
<<<<<<< HEAD
    <string name="title_activity_edit_profile">EditProfile</string>
=======
    <string name="saveenvironment">SaveTheEnvironment</string>
    <!--Admin User page -->
    <string name="user">User Name</string>
>>>>>>> 284f1f2e69892fd025d3d1480d615d4794066b8d
</resources>
