<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_item_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/grid_item_id_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailId"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/grid_item_name_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/grid_item_username_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailUsername"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/grid_item_price_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:lineSpacingExtra="10sp"
            android:text="@string/itemDetailPrice"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/grid_item_description_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailDescription"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/grid_item_trash_all"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginLeft="350dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:onClick="displayConfirmationBox"
            app:srcCompat="@android:drawable/ic_delete" />
    </LinearLayout>

</RelativeLayout>

