<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/grid_item_id_to_deliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailId"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/grid_item_name_to_deliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/grid_item_username_to_deliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailUsername"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/grid_item_price_to_deliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/itemDetailPrice"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/grid_item_description_to_deliver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemDetailDescription"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/grid_item_trash_to_deliver"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="10dp"
            android:onClick="displayConfirmationBox"
            app:srcCompat="@drawable/ic_delete" />

        <ImageView
            android:id="@+id/grid_item_message_to_deliver"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:onClick="makeAppointment"
            app:srcCompat="@drawable/ic_message" />
    </LinearLayout>
</RelativeLayout>